# minchash

./: Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
src/: fast.rs  lib.rs  secure.rs
